# hooks-build-type

./: README.md  design.md  extended-survey.md  hooks-uses.md  survey.md
extended_survey/: Main.hs  hackage-survey.cabal  top-hackage.txt
